# Reconstruction

./: CGALInstall.sh  CMakeLists.txt  Instructions_for_CGAL_Installation.txt  README.md  ct_shape.cpp
Sample_Data/: aliendp.txt  camel.txt  cartbs.txt  cartdp.txt  cathole.txt  catholebs.txt  crownbs.txt  crowndp.txt  deerbs.txt  deerdp.txt  dog.txt  dogbs.txt  dogdp.txt  dogsbs.txt  dovebs.txt  dovedp.txt  duckbs.txt  duckdp.txt  fishdp.txt  head.txt  headbs.txt  introbs.txt  introdp.txt  jig.txt  jigbs.txt  knightbs.txt  knightdp.txt  multfishbs.txt  multfishdp.txt
